RESOLVED FIXED147638
RenderTheme::paint() should take RenderBox instead of RenderObject.
https://bugs.webkit.org/show_bug.cgi?id=147638
Summary RenderTheme::paint() should take RenderBox instead of RenderObject.
alan
Reported 2015-08-04 11:35:26 PDT
SSIA
Attachments
Patch (13.97 KB, patch)
2015-08-04 11:37 PDT, alan
no flags
alan
Comment 1 2015-08-04 11:37:10 PDT
WebKit Commit Bot
Comment 2 2015-08-04 13:46:18 PDT
Comment on attachment 258190 [details] Patch Clearing flags on attachment: 258190 Committed r187885: <http://trac.webkit.org/changeset/187885>
WebKit Commit Bot
Comment 3 2015-08-04 13:46:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.