RenderTheme::paint() should take RenderBox instead of RenderObject. https://bugs.webkit.org/show_bug.cgi?id=147638

Reviewed by Andreas Kling.

No change in functionality.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paint):
(WebCore::RenderTheme::updateControlStatesForRenderer): ->RenderBox too.
(WebCore::RenderTheme::isActive): Remove redundant code.
* rendering/RenderTheme.h:


Canonical link: https://commits.webkit.org/165702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187885 268f45cc-cd09-0410-ab3c-d52691b4dbfc